server/modules/@apostrophecms/home-page/ui/src/index.scss
@import '../../../../asset/ui/src/scss/settings';

.pdl-home {
  position: relative;
  background-color: white;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  @media (max-width: map-get($breakpoints, 'md')) {
    background-attachment: scroll;
  }
}

.pdl-home__headline {
  position: fixed;
  top: 260px;
  color: black;
  font-size: 35px;
  font-weight: 500;
  text-align: center;
  z-index: 1;
  width: 80%;

  @media (min-width: map-get($breakpoints, 'sm')) {
    top: 175px;
    font-size: 62.5px;
  }
  @media (min-width: map-get($breakpoints, 'md')) {
    top: 315px;
    font-size: 112px;
  }
}

.pdl-home__covers {
  position: relative;
  z-index: 2;
  height: 560px;
  width: 100%;
  overflow: hidden;
  display: flex;

  @media (min-width: map-get($breakpoints, 'sm')) {
    height: 510px;
  }
  @media (min-width: map-get($breakpoints, 'md')) {
    height: 1873px;
    overflow: unset;
  }

  .pdl-home__cover {
    width: 140px;
    position: absolute;
    pointer-events: none;

    @media (min-width: map-get($breakpoints, 'sm')) {
      width: 130px;
    }
    @media (min-width: map-get($breakpoints, 'md')) {
      width: 246px;
    }

    &--1 {
      top: 18px;
      left: 4.94%;

      @media (min-width: map-get($breakpoints, 'sm')) {
        top: -60px;
        left: 11.94%;
      }

      @media (min-width: map-get($breakpoints, 'md')) {
        top: 28px;
        left: 11.94%;
      }
    }

    &--2 {
      top: 48px;
      right: -4.59%;

      @media (min-width: map-get($breakpoints, 'sm')) {
        top: -25px;
        right: 24.41%;
      }

      @media (min-width: map-get($breakpoints, 'md')) {
        top: 100px;
        right: 25.41%;
      }
    }

    &--3 {
      top: 250px;
      left: -20.28%;

      @media (min-width: map-get($breakpoints, 'sm')) {
        top: 203px;
        left: 2.72%;
      }

      @media (min-width: map-get($breakpoints, 'md')) {
        top: 503px;
        left: 4.72%;
      }
    }

    &--4 {
      top: 323px;
      right: -0.28%;

      @media (min-width: map-get($breakpoints, 'sm')) {
        top: 213px;
        right: 6.72%;
      }

      @media (min-width: map-get($breakpoints, 'md')) {
        top: 532px;
        right: 3.72%;
      }
    }

    &--5 {
      top: 490px;
      left: 22.61%;

      @media (min-width: map-get($breakpoints, 'sm')) {
        top: 310px;
        left: 47.61%;
      }

      @media (min-width: map-get($breakpoints, 'md')) {
        top: 685px;
        left: 47.61%;
      }
    }

    &--6 {
      display: none;

      @media (min-width: map-get($breakpoints, 'sm')) {
        display: block;
        top: 465px;
        left: 25.61%;
      }
      @media (min-width: map-get($breakpoints, 'md')) {
        top: 968px;
        left: 22.98%;
      }
    }

    &--7 {
      display: none;
      @media (min-width: map-get($breakpoints, 'md')) {
        display: block;
        top: 1087px;
        right: 15%;
      }
    }

    &--8 {
      display: none;
      @media (min-width: map-get($breakpoints, 'md')) {
        display: block;
        top: 1298px;
        left: 1.94%;
      }
    }

    &--9 {
      display: none;
      @media (min-width: map-get($breakpoints, 'md')) {
        display: block;
        top: 1370px;
        right: 44.93%;
      }
    }
  }
}

.pdl-home__discover {
  background: black;
  color: white;
  padding: 12px;
  font-size: 18px;
  border-radius: 4px;
  position: sticky;
  top: calc(100% - 67px);
  margin-bottom: 30px;
  margin-left: auto;
  margin-right: auto;
  align-self: baseline;
  display: flex;
  gap: 8px;
  align-items: center;

  @media (min-width: map-get($breakpoints, 'md')) {
    padding: 16px 12px;
    top: calc(100% - 85px);
  }

  &:not(:hover) {
    color: white;
    svg path {
      animation: notHoverArrow 300ms ease;
    }
  }

  &:hover {
    color: white;
    svg path {
      animation: hoverArrow 300ms ease;
    }
  }
}

.pdl-home__about {
  background: black;
  color: white;
  width: 100%;
  text-align: left;
  z-index: 3;

  font-size: 39px;
  padding-top: 60px;
  padding-bottom: 22px;

  @media (min-width: map-get($breakpoints, 'sm')) {
    font-size: 51px;
    padding-bottom: 20px;
    padding-top: 67px;
  }

  @media (min-width: map-get($breakpoints, 'md')) {
    font-size: 84px;
    padding-bottom: 33px;
    padding-top: 97px;
  }

  &-text {
    padding-left: 22px;
    padding-right: 15px;
    padding-bottom: 19px;
    letter-spacing: -1px;
    line-height: 49px;

    @media (min-width: map-get($breakpoints, 'sm')) {
      letter-spacing: 0;
      padding-left: 20px;
      padding-right: 18px;
      padding-bottom: 17px;
    }

    @media (min-width: map-get($breakpoints, 'md')) {
      letter-spacing: 0;
      padding-left: 32px;
      padding-right: 155px;
      padding-bottom: 40px;
      line-height: 82px;
    }
  }

  &-link {
    font-weight: 400;
    font-size: 19px;
    height: fit-content;
    transition: all 0.3s;
    border: 1px solid white;
    border-radius: 4px;
    padding: 10px;
    margin-left: 22px;
    color: white;
    display: flex;
    width: fit-content;
    gap: 9px;
    align-items: center;
    justify-content: center;

    @media (min-width: map-get($breakpoints, 'md')) {
      gap: 16px;
      font-size: 26px;
      padding: 20px 24px;
      margin-left: 32px;
      margin-top: 3px;
    }

    svg {
      width: 12px;

      @media (min-width: map-get($breakpoints, 'md')) {
        width: 24px;
      }
    }

    &:hover svg path {
      animation: hoverArrowX 300ms ease;
    }

    @keyframes hoverArrowX {
      0% {
        transform: translateX(0)
      }

      50% {
        transform: translateX(40px)
      }

      51% {
        visibility: hidden;
      }

      52% {
        transform: translateX(-25px);
      }

      100% {
        transform: translateX(0);
      }
    }
  }

  #svg-orange {
    fill: white;
    position: absolute;
    width: 31px;
    height: 46px;
    padding-left: 6px;

    @media (min-width: map-get($breakpoints, 'sm')) {
      width: 42px;
      height: 59px;
      padding-left: 9px;
    }

    @media (min-width: map-get($breakpoints, 'md')) {
      width: 72px;
      height: 96px;
      padding-left: 14px;
    }
  }

  #svg-blue {
    position: relative;
    fill: white;
    width: 32px;
    height: 25px;

    @media (min-width: map-get($breakpoints, 'sm')) {
      width: 42px;
      height: 34px;
    }

    @media (min-width: map-get($breakpoints, 'md')) {
      width: 72px;
      height: 58px;
    }
  }
}

.pdl-home__areas {
  z-index: 3;
  background-color: white;

  .pdl-book-preview-widget {
    margin-top: 0;

    @media (min-width: map-get($breakpoints, 'md')) {
      margin-top: 22px;
    }
    @media (min-width: map-get($breakpoints, 'sm')) {
      margin-top: 0;
    }

    &:first-child {
      margin-top: 18px;

      @media (min-width: map-get($breakpoints, 'md')) {
        margin-top: 60px;
      }
    }
  }
}

.pdl-home__donate {
  position: relative;
  margin-top: -60px;
  z-index: 4;
  width: 100vw;
}

